--- a/www/index.html
+++ b/www/index.html
@@ -6,36 +6,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <form method="get">
-        <label>
-            Grid reference:
-            <input name="grid-reference" id="grid-reference-input" type="text">
-        </label>
-        <button type="submit" id="submit-grid-reference">convert!</button>
-        </br>
-        <label>
-            Coordinates:
-            <output name="coordinates" for="grid-reference" id="grid-reference-output"></output>
-        </label>
-    </form>
-    <script type="module">
-        import init, { reference_to_coordinates } from "../pkg/national_grid.js"
-        init()
-            .then(() => {
-                let input = document.getElementById("grid-reference-input");
-                let output = document.getElementById("grid-reference-output");
-                function updateOutput(event) {
-                    let coordinates = reference_to_coordinates(input.value);
-                    output.innerText = coordinates;
-                    event.preventDefault();
-                }
-                let submitButton = document.getElementById("submit-grid-reference");
-                submitButton.addEventListener("click", updateOutput)
-            })
-    </script>
+<body class="main column-centre">
+    <div class="tab-container">
+        <div class="tab">
+            <button class="tab-links" data-tab-content="reference-to-coordinates">Reference to coordinates</button>
+            <button class="tab-links" data-tab-content="coordinates-to-reference">Coordinates to reference</button>
+        </div>
+        <div class="tab-content active" id="reference-to-coordinates">
+            <form method="get">
+                <fieldset>
+                    <legend> Grid reference</legend>
+                    <input name="reference" id="reference-input" type="text"
+                        placeholder="Enter a BNG grid reference...">
+                    <button type="submit" id="submit-reference">convert!</button>
+                </fieldset>
+                <fieldset>
+                    <legend>Coordinates</legend>
+                    <div class="column-left">
+                        <label>
+                            Eastings:
+                            <output name="eastings" id="eastings-output" type="number">
+                        </label>
+                        <label>
+                            Northings:
+                            <output name="northings" id="northings-output" type="number">
+                        </label>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+        <div class="tab-content inactive" id="coordinates-to-reference">
+            <form method="get">
+                <fieldset>
+                    <legend>Coordinates</legend>
+                    <div class="column-left">
+                        <label>
+                            Eastings:
+                            <input name="eastings" id="eastings-input" type="number">
+                        </label>
+                        <label>
+                            Northings:
+                            <input name="northings" id="northings-input" type="number">
+                        </label>
+                    </div>
+                    <button type="submit" id="submit-coordinates">convert!</button>
+                </fieldset>
+                <fieldset>
+                    <legend>Reference</legend>
+                    <output name="reference" for="coordinates" id="reference-output"></output>
+                </fieldset>
+            </form>
+        </div>
+    </div>
+    <script type="module" src="./main.js"></script>
 </body>
 
 </html>
